<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="app_logo">App Logo</string>
    <string name="restaurant_app">Додаток рестрану</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="auth">Вхід</string>
    <string name="no_register">Не зареєстровані? Натисніть тут аби зареєструватися</string>
    <string name="login">Логін</string>
    <string name="registered">Вже зареєстровані? Натисніть тут, аби авторизуватися</string>
    <string name="register">Реєстрація</string>
    <string name="phone">Номер телефону</string>
    <string name="get_stock">Отримати залишки</string>
    <string name="update_stock">Оновити залишок</string>
    <string name="stocks">Залишки складу</string>
    <string name="product_name">Назва продукту</string>
    <string name="quantity">Кількість</string>
    <string name="unit">Одиниця виміру (кг, шт)</string>
    <string name="AddProduct">Додати продукт</string>
    <string name="AddDish">Додати страву</string>
    <string name="DishName">Назва страви</string>
    <string name="Description">Опис</string>
    <string name="DishPrice">Ціна (₴)</string>
    <string name="DishCategory">Категорія</string>
    <string name="SaveDish">Зберегти страву</string>
    <string name="order">Замовити</string>
    <string name="totalPrice">Загальна вартість</string>
    <string name="ToOrder">Оформити замовлення</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="dishes">Страви</string>
    <string name="my_orders">Мої замовлення</string>
    <string name="schedule">"Розклад працівників "</string>
    <string name="orders">Замовлення</string>
    <string name="orders_dishes">Замовлені страви</string>
    <string name="AddSchedule">Додати розклад</string>
    <string name="WorkDate">Робочий день</string>
    <string name="SaveSchedule">Зберегти розклад</string>
    <string name="AddFinanceInfo">Додати фінансову інформацію</string>
    <string name="finance_info">Фінансова інформація</string>
    <string name="_0_00">Сума: 0.00</string>
    <string name="SaveFinanceInfo">Зберегти фінансову інформацію</string>
    <string name="work_date">Дата</string>
    <string name="shift">Зміна</string>
    <string name="schedule_user">Розклад для працівника</string>
    <string name="logout">Вийти</string>
    <string name="user">Адміністратор з №</string>
    <string name="users">Користувачі</string>
</resources>