<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentStart="true"
            android:id="@+id/scheduleHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_alignParentEnd="true"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnToStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/stocks"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnToDish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/dishes"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnToOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/orders"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnToOrdersDishes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/orders_dishes"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnToSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/schedule"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnToFinance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/finance_info"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnToUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/users"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>