<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvDishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DishName"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDishDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textSize="14sp"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDishCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DishCategory"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDishPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DishPrice"
            android:textSize="16sp"
            android:textColor="#000"
            android:textStyle="bold" />

        <!-- Динамічне поле кількості -->
        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btnDecrease"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00B1FF"
                android:text="@string/minus"
                android:textColor="#455A64"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="1dp" />

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="20sp"
                android:textColor="#000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnIncrease"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="#00B1FF"
                android:text="@string/plus"
                android:textColor="#455A64"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="1dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#4caf50"
            android:text="@string/order"
            android:textColor="#0D47A1"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
