<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrderActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/dishNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DishName"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalPrice"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/btnSaveOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/ToOrder"
        android:textColor="#0D47A1"
        android:textStyle="bold"
        app:cornerRadius="1dp" />

</LinearLayout>