<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStockActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/etUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit"
        android:inputType="text"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        android:importantForAutofill="no"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/AddProduct"
        android:textColor="#263238"
        app:cornerRadius="1dp" />

</LinearLayout>