<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddFinanceActivity"
    android:padding="16dp">

    <Spinner
        android:id="@+id/spinnerOrderId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_00"
        android:textSize="16sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_margin="5dp"
        android:inputType="text"
        android:minHeight="48dp"
        android:importantForAutofill="no"
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Description"
        android:textColorHint="#000"
        android:textColor="#000"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnSaveSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="#4caf50"
        android:text="@string/SaveFinanceInfo"
        android:textColor="#263238"
        app:cornerRadius="1dp"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>